--- a/src/App.css
+++ b/src/App.css
@@ -19,19 +19,34 @@ code {
     /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
     background: linear-gradient(
         -45deg,
-        rgb(150, 150, 155),
-        #df7823,
-        #766f7a,
-        #81db9c,
-        #8dd7ee,
-        #8b1e82,
-        #41445e,
-        rgb(187, 148, 148)
+       
+        
+        #8946A6,
+        #B762C1,
+        #EA99D5,
+        #FFCDDD,
+        #D3DEDC,
+        #92A9BD,
+        #7C99AC,
+        #FFEFEF,
+        #1A374D,
+        #406882,
+        #6998AB,
+        #B1D0E0,
+        #F2789F,
+        #F999B7,
+        #F9C5D5,
+        #FEE3EC
+
+
+
+        
     );
     background-size: 400% 400%;
     animation: gradient 10s ease-in infinite;
     height: 100vh;
 }
+
 
 @keyframes gradient {
     0% {
